# basic_programs

./: .gitignore  CMakeLists.txt  README.md  automatic-cash-dispense.cpp  calc-hypotenuse.cpp  calculator.cpp  decimal-to-hexadecimal-converter.cpp  even_number.cpp  graphic-multiply.cpp  letter-to-number.cpp  main.cpp  make-figures.cpp  measurement-converter.cpp  menu.cpp  menuHandler.cpp  move-dot.cpp  multiply-table-generator.cpp  multiply-table-list.cpp  number-to-binary-converter.cpp  palindrome-check.cpp  rome-number-converter.cpp  utils.cpp
